--- a/blogspot.html
+++ b/blogspot.html
@@ -4,10 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/estilos.css">
     <title>Esteban Blog</title>
 </head>
 <body>
-    <h1> Mi Blog Personal</h1>
-    <p> En este blog, compartire aspectos de mi vida personal y profesional </p>
+    <div id = "container">
+        <div id = "post">
+            <h1> Mi Blog Personal</h1>
+            <p> En este blog, compartire aspectos de mi vida personal y profesional </p>
+        </div>
+    </div>   
 </body>
 </html>
