Estructura inicial cabecera del proyecto

--- a/blogspot.html
+++ b/blogspot.html
@@ -10,6 +10,7 @@
 <body>
     <div id = "container">
         <div id = "post">
+            <p>Cabecera</p>
             <h1> Mi Blog Personal</h1>
             <p> En este blog, compartire aspectos de mi vida personal y profesional </p>
         </div>
