Finalizada la cabecera con su diseño

--- a/blogspot.html
+++ b/blogspot.html
@@ -11,6 +11,8 @@
     <div id = "container">
         <div id = "post">
             <p>Cabecera</p>
+            Hyperblog
+            <span id = "tagline"> Tu Blog Informativo de Confianza</span>
             <h1> Mi Blog Personal</h1>
             <p> En este blog, compartire aspectos de mi vida personal y profesional </p>
         </div>
