Se agrega un nuevo parrafo en la rama master

--- a/blogspot.html
+++ b/blogspot.html
@@ -12,6 +12,9 @@
         <div id = "post">
             <h1> Mi Blog Personal</h1>
             <p> En este blog, compartire aspectos de mi vida personal y profesional </p>
+            <p>
+                Empezaremos este blog con una breve reseña de mi infancia y de mi familia
+            </p>
         </div>
     </div>   
 </body>
