Organizando diseño de la cabecera

--- a/blogspot.html
+++ b/blogspot.html
@@ -9,9 +9,11 @@
 </head>
 <body>
     <div id = "container">
-        <div id = "post">
+        <div id = cabecera>
             Hyperblog
             <span id = "tagline"> Tu Blog Informativo de Confianza</span>
+        </div>
+        <div id = "post">
             <h2> Mi Blog Personal</h2>
             <p> En este blog, compartire aspectos de mi vida personal y profesional </p>
             <p>
