Cambios a la caberera del main y agrego mensaje de suscripción

--- a/blogspot.html
+++ b/blogspot.html
@@ -11,7 +11,7 @@
     <div id = "container">
         <div id = cabecera>
             Hyperblog
-            <span id = "tagline"> Tu Blog Informativo de Confianza</span>
+            <span id = "tagline"> Tu Blog Informativo de desvare</span>
         </div>
         <div id = "post">
             <h2> Mi Blog Personal</h2>
@@ -19,6 +19,7 @@
             <p>
                 Empezaremos este blog con una breve reseña de mi infancia y de mi familia
             </p>
+            <p>Suscribete pero ya!!</p>
         </div>
     </div>   
 </body>
