--- a/blogspot.html
+++ b/blogspot.html
@@ -11,7 +11,7 @@
     <div id = "container">
         <div id = cabecera>
             Hyperblog
-            <span id = "tagline"> Tu Blog Informativo de Cabecera</span>
+            <span id = "tagline"> Bienvenido a tu Blog Informativo de Cabecera</span>
         </div>
         <div id = "post">
             <h2> Mi Blog Personal</h2>
