Agregando redes sociales

--- a/blogspot.html
+++ b/blogspot.html
@@ -20,6 +20,7 @@
                 Empezaremos este blog con una breve reseña de mi infancia y de mi familia
             </p>
             <p>Suscribete pero ya!!</p>
+            <p>Sigueme en redes sociales (Instagram , Twtter , Twich)</p>
         </div>
     </div>   
 </body>
