Modicacion de fondo y optimizacion de header

--- a/blogspot.html
+++ b/blogspot.html
@@ -10,6 +10,7 @@
 <body>
     <div id = "container">
         <div id = cabecera>
+            <img id = "logo" src="img/logo.png">
             Hyperblog
             <span id = "tagline"> Bienvenido a tu Blog Informativo de Cabecera</span>
         </div>
