Agregando footer mejorado

--- a/blogspot.html
+++ b/blogspot.html
@@ -13,6 +13,7 @@
             Hyperblog
             <span id = "tagline"> Bienvenido a tu Blog Informativo de Cabecera</span>
         </div>
+
         <div id = "post">
             <h2> Mi Blog Personal</h2>
             <p> En este blog, compartire aspectos de mi vida personal y profesional </p>
@@ -22,6 +23,12 @@
             <p>Suscribete pero ya!!</p>
             <p>Sigueme en redes sociales (Instagram , Twtter , Twich)</p>
         </div>
+        <div id = "footer">
+            <p>Hecho con mucha dedicación</p>
+        </div>
     </div>   
-</body>
+    </body>
+<footer>
+    <p> Estamos progresando en esto !!!!!</p>
+</footer>
 </html>
