Agregando nueva informacion de Juan Manuel

--- a/blogspot.html
+++ b/blogspot.html
@@ -21,6 +21,11 @@
             <p>
                 Empezaremos este blog con una breve reseña de mi infancia y de mi familia
             </p>
+
+            <p>
+               Juan Maunel es mi hijo tiene 18 años , esta estudiando Ingenieria de Software, y en su ratos
+               libres es un jugador en linea experto y un excelente Dj.
+            </p>
             <p>Suscribete pero ya!!</p>
             <p>Sigueme en redes sociales (Instagram , Twtter , Twich)</p>
         </div>
