Corriegiendo errores de gramatica y agregando información faltante

--- a/blogspot.html
+++ b/blogspot.html
@@ -17,9 +17,10 @@
 
         <div id = "post">
             <h2> Mi Blog Personal</h2>
-            <p> En este blog, compartire aspectos de mi vida personal y profesional </p>
+            <p> En este blog, compartiré aspectos de mi vida personal y profesional </p>
             <p>
-                Empezaremos este blog con una breve reseña de mi infancia y de mi familia
+                Empezarémos este blog con una breve reseña de mi infancia, de mi familia y de 
+                todas aquellas cosas que me gustan.
             </p>
             <p>Suscribete pero ya!!</p>
             <p>Sigueme en redes sociales (Instagram , Twtter , Twich)</p>
