--- a/blogspot.html
+++ b/blogspot.html
@@ -27,6 +27,11 @@
                Juan Maunel es mi hijo tiene 18 años , esta estudiando Ingenieria de Software, y en su ratos
                libres es un jugador en linea experto y un excelente Dj.
             </p>
+            
+            <p>
+                EL nombre de mi esposa es Valentina
+            </P>    
+        
             <p>Suscribete pero ya!!</p>
             <p>Sigueme en redes sociales (Instagram , Twtter , Twich)</p>
         </div>
